Convenience API for #14
