# cdot_rest/urls.py
@@ -15,6 +15,8 @@ urlpatterns = [
          name='transcripts_for_gene'),
     path('transcripts/gene/<gene_symbol>/tags/<genome_build>', views.transcripts_tags_for_gene,
          name='transcripts_tags_for_gene'),
+    path('transcripts/gene/<gene_symbol>/mane/<genome_build>', views.mane_transcripts_for_gene,
+         name='mane_transcripts_for_gene'),
     path('transcripts/region/<contig>/<aln_method>/<int:start>/<int:end>', views.transcripts_for_region,
          name='transcripts_for_region'),
 ]
